Fixed bugs
* Content no longer highlightable
* Sleep button behaves correctly after completing a cycle.
* Alarm labels and underline dissapear now after setting the alarm and
clicking sleep
* alarm set for label appears above the alarm clock time when going to
sleep now

--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,13 @@ body {
 	font-family: 'Lato', sans-serif;
 	font-weight: 100;
 	-webkit-transition: background-color 2s;
+
+	-webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .logo {
@@ -94,6 +101,19 @@ body {
 	background-color: #162145;
 }
 
+.alarm-set-for {
+	font-weight: 100;
+	position: absolute;
+	font-size: 2vw;
+	width: 15%;
+	left: 45%;
+	top: 61%;
+	pointer-events: none;
+
+	-webkit-transition: opacity 0.4s;
+	transition: opacity 0.4s;
+}
+
 .alarm {
 	font-weight: 100;
 	position: absolute;
@@ -132,7 +152,7 @@ body {
 	font-weight: 100;
 	border-bottom: 1px solid white;
 
-	transition: border-bottom 0.4s;
+	transition: border 0.4s;
 }
 
 .alarm-hour input:hover, .alarm-minute input:hover,
@@ -172,8 +192,8 @@ body {
 	top: 100%;
 	width: 100%;
 
-	-webkit-transition: opacity: 0.4s;
-	transition: opacity: 0.4s;
+	-webkit-transition: opacity 0.4s;
+	transition: opacity 0.4s;
 }
 
 ::-webkit-input-placeholder {
